tests/corpus/negative/N12-enumerate/source.py
def find(values):
    for index, value in enumerate(values):
        return value
    return -1
